# tap-amazon-advertising

./: .gitignore  README.md  bandit-baseline.json  config.json  config.json.example  get_refresh_token.py  pyproject.toml  setup.py
.github/: CODEOWNERS
.github/workflows/: build.yml
tap_amazon_advertising/: __init__.py  client.py  config.py  state.py
tap_amazon_advertising/schemas/: ad_group_biddable_keywords.json  ad_group_negative_keywords.json  ad_groups.json  campaign_negative_keywords.json  campaigns.json  portfolios.json  product_ads.json  profiles.json  sponsored_brands_campaigns.json  sponsored_brands_report_ad_groups.json  sponsored_brands_report_campaigns.json  sponsored_brands_report_keywords.json  sponsored_brands_report_search_terms.json  sponsored_brands_report_targets.json  sponsored_brands_video_report_ad_groups.json  sponsored_brands_video_report_campaigns.json  sponsored_brands_video_report_keywords.json  sponsored_brands_video_report_search_terms.json  sponsored_brands_video_report_targets.json  sponsored_display_campaigns.json  sponsored_display_report_campaigns.json  sponsored_displays_ad_groups.json  sponsored_displays_campaigns.json  sponsored_displays_product_ads.json  sponsored_displays_report_ad_groups.json  sponsored_displays_report_campaigns.json  sponsored_displays_report_product_ads.json  sponsored_displays_report_targets.json  sponsored_products_campaigns.json  sponsored_products_report_ad_groups.json  sponsored_products_report_campaigns.json  sponsored_products_report_keywords.json  (+4 more)
tests/: all-streams.json  test_e2e.py
(+72 files in other folders)
